--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@ legend.sansserif {
 <body>
 
 <div class="flex-container">
-<div class="box" id="woop"></div>
+<div class="box" id="banner"></div>
 </div>
 
 <div class="flex-container">
 
-<div class="box">
+<div class="box" id="text-paste">
 <form action="/upload" id="paste" method="post" enctype="multipart/form-data">
   <fieldset>
     <legend class="sansserif">Upload paste</legend>
@@ -80,7 +80,7 @@ legend.sansserif {
 </form>
 </div>
 
-<div class="box">
+<div class="box" id="image-paste">
 <form action="/upload" id="upload" method="post" enctype="multipart/form-data">
     <fieldset>
       <legend class="sansserif">Upload image</legend>
@@ -137,7 +137,25 @@ legend.sansserif {
 </div>
 
 <script>
+  var sessid;
+  var defaultStateCaptured = false;
+  var defaultImage;
+  var defaultText;
+  var defaultLogin;
+  var defaultRegister;
+
+  function captureDefaultState() {
+    if(!defaultStateCaptured) {
+      defaultImage = document.getElementById("image-paste").innerHTML;
+      defaultText = document.getElementById("text-paste").innerHTML;
+      defaultLogin = document.getElementById("login").innerHTML;
+      defaultRegister = document.getElementById("register").innerHTML;
+      defaultStateCaptured = true;
+    }
+  };
+
   async function logIn() {
+    captureDefaultState();
     var decoder = new TextDecoder();
     const message1 = document.getElementById("user-login").value;
     const message2 = document.getElementById("password-login").value;
@@ -149,15 +167,20 @@ legend.sansserif {
     });
 
     if(response.ok) {
-      let sessid = await response.text();
-      document.getElementById('woop').innerHTML =
-        "<p class=\"sansserif\">Logged in as " + message1 + "</p>";
+      sessid = await response.text();
+      document.getElementById('banner').innerHTML =
+        "<p class=\"sansserif\">Logged in as " + message1 + "</p>" +
+        "<p><button onclick=\"logOut()\" class=\"button\">Log out</button></p>";
       document.getElementById('login').innerHTML = "";
       document.getElementById('register').innerHTML = "";
+    }
+    else {
+      document.getElementById('banner').innerHTML = "<p class=\"sansserif\">Login failed!</p>"
     }
   }
 
   async function register() {
+    captureDefaultState();
     var decoder = new TextDecoder();
     const message1 = document.getElementById("user-register").value;
     const message2 = document.getElementById("password-register").value;
@@ -170,9 +193,32 @@ legend.sansserif {
 
     if(response.ok) {
       let result = await response.text();
-      document.getElementById('woop').innerHTML =
+      document.getElementById('banner').innerHTML =
         "<p class=\"sansserif\">Registered user " + message1 +"</p>";
-      document.getElementById('login').innerHTML = "";
+      document.getElementById('register').innerHTML = "";
+    }
+    else {
+      document.getElementById('banner').innerHTML = "<p class=\"sansserif\">Register failed!</p>"
+    }
+  }
+
+  async function logOut() {
+    if(sessid !== undefined) {
+      let response = await fetch('/session/logout', {
+      method: 'POST',
+      body: sessid
+      });
+    }
+    await reset();
+  }
+
+  async function reset() {
+    document.getElementById('banner').innerHTML = "";
+    if(defaultStateCaptured) {
+      document.getElementById("image-paste").innerHTML = defaultImage;
+      document.getElementById("text-paste").innerHTML = defaultText;
+      document.getElementById("login").innerHTML = defaultLogin;
+      document.getElementById("register").innerHTML = defaultRegister;
     }
   }
 
